--- a/.env-copy
+++ b/.env-copy
@@ -1,5 +1,7 @@
 SECRET_KEY=""
 
+FRONTEND_URL="http://localhost:3000"
+
 DEBUG=True
 ALLOWED_HOSTS=*
 CORS_ALLOWED_ORIGINS=http://localhost:8000
@@ -10,7 +12,7 @@ DJANGO_ADMIN_USERNAME=admin
 DJANGO_ADMIN_USER_MAIL=admin@admin.com
 DJANGO_ADMIN_USER_PASWORD=admin
 
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 REDIS_DB=0
@@ -18,6 +20,14 @@ REDIS_DB=0
 POSTGRES_DB=app
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 DATABASE_ENGINE=postgresql
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=localhost
+EMAIL_PORT=1025
+EMAIL_USE_TLS=False
+EMAIL_USE_SSL=False
+EMAIL_HOST_USER=noreply@app.com
+EMAIL_HOST_PASSWORD=
