--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,14 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-
+  
+  mailpit:
+    image: axllent/mailpit:v1.24
+    container_name: mailpit
+    ports:
+      - "8025:8025"  
+      - "1025:1025"
+  
 volumes:
   postgres_data:
   redis_data:
