--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,36 @@
-asgiref==3.7.2
-Django==5.0.2
-django-cors-headers==4.3.1
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
-pillow==10.2.0
-PyJWT==2.8.0
-pytz==2024.1
-rest-framework-simplejwt==0.0.2
-sqlparse==0.4.4
-typing_extensions==4.9.0
-tzdata==2023.4
+amqp==5.3.1
+asgiref==3.8.1
+billiard==4.2.1
+celery==5.4.0
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+Django==5.2
+django-cors-headers==4.7.0
 django-prometheus==2.3.1
+django-redis==5.4.0
+django_celery_results==2.6.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+drf-yasg==1.21.10
+inflection==0.5.1
+kombu==5.5.2
+packaging==24.2
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+psycopg-binary==3.2.6
+psycopg2-binary==2.9.10
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.2
+redis==5.2.1
+shortuuid==1.0.13
+six==1.17.0
+sqlparse==0.5.3
+tzdata==2025.2
+uritemplate==4.1.1
+vine==5.1.0
+wcwidth==0.2.13
